istio/flight/flight-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: flight
  labels:
    app: flight
    service: flight
spec:
  ports:
    - port: 9090
      name: http
  selector:
    app: flight
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-v1
  labels:
    app: flight
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flight
      version: v1
  template:
    metadata:
      labels:
        app: flight
        version: v1
    spec:
      serviceAccountName: flight-details
      containers:
        - name: flight
          image: istio-flight-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9090
---
