istio/flight/flight-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flight
spec:
  hosts:
    - "*"
  gateways:
    - shared-gateway
  http:
    - match:
        - uri:
            prefix: /api/flight
      route:
        - destination:
            host: flight
            port:
              number: 9090
